--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,7 +17,14 @@
         <%= campground.location %>
     </h2>
 
-    <a href='/campgrounds'>All Campgrounds</a>
+    <p>
+        <a href='/campgrounds/<%= campground._id%>/edit'>Edit</a>
+    </p>
+
+    <footer>
+        <a href='/campgrounds'>All Campgrounds</a>
+    </footer>
+
 
 </body>
 
