--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,14 +1,4 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit <%= campground.title %>
-    </title>
-</head>
-
-<body>
+<% layout('layout/boilerplate') %>
     <form action='/campgrounds/<%=campground._id%>?_method=PUT' method="POST">
         <div>
             <label for='title'>Title</label>
@@ -25,6 +15,3 @@
     </form>
 
     <a href='/campgrounds/<%= campground._id %> '>Back</a>
-</body>
-
-</html>
