--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,13 +1,4 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds</title>
-</head>
-
-<body>
+<% layout('layout/boilerplate') %>
     <h1>All Campgrounds</h1>
     <div>
         <a href='/campgrounds/new'>
@@ -23,6 +14,3 @@
             </li>
             <% } %>
     </ul>
-</body>
-
-</html>
