--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,13 +1,4 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campground</title>
-</head>
-
-<body>
+<% layout('layout/boilerplate') %>
     <form action='/campgrounds' method="POST">
         <div>
             <label for='title'>Title</label>
@@ -22,6 +13,3 @@
     </form>
 
     <a href='/campgrounds'>Back</a>
-</body>
-
-</html>
