--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,17 +1,45 @@
 <% layout('layout/boilerplate') %>
-    <form action='/campgrounds/<%=campground._id%>?_method=PUT' method="POST">
-        <div>
-            <label for='title'>Title</label>
-            <input type='text' id='title' name=campground[title] placeholder="Add Title"
-                value="<%= campground.title %> ">
-        </div>
-        <div>
-            <label for='location'>location</label>
-            <input type='text' id='location' name=campground[location] placeholder='Add location'
-                value='<%= campground.location %>'>
-        </div>
+    <div class="row">
+        <h1 class="text-center">
+            Edit Campground
+        </h1>
+        <div class="col-6 offset-3">
+            <form action='/campgrounds/<%=campground._id%>?_method=PUT' method="POST">
+                <div class='mb-3'>
+                    <label class='form-label' for='title'>Title</label>
+                    <input class='form-control' type='text' id='title' name='campground[title]' placeholder="Add Title"
+                        value="<%= campground.title %>">
+                </div>
+                <div class='mb-3'>
+                    <label class='form-label' for='location'>Location</label>
+                    <input class='form-control' type='text' id='location' name='campground[location]'
+                        placeholder='Add location' value='<%= campground.location %>'>
+                </div>
+                <div class="mb-3">
+                    <label class='form-label' for='price'>Price</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="price">$</span>
+                        <input type="text" class="form-control" placeholder="0.00" id='price' name='campground[price]'
+                            aria-label="price" aria-describedby="price" value='<%= campground.price%>'>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class='form-label' for='image'>Image URL</label>
+                    <input class='form-control' type='text' id='image' name='campground[image]'
+                        placeholder='Add Image URL' value='<%= campground.image%>'>
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea class="form-control" id="description" name='campground[description]'
+                        placeholder="Add Description" rows="3"><%= campground.description %> </textarea>
+                </div>
 
-        <button>Submit</button>
-    </form>
+                <div class="mb-3">
+                    <button class='btn btn-success'>Update Campground</button>
+                </div>
 
-    <a href='/campgrounds/<%= campground._id %> '>Back</a>
+            </form>
+
+            <a href='/campgrounds/<%= campground._id %>'>Back</a>
+        </div>
+    </div>
