--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,15 +1,45 @@
 <% layout('layout/boilerplate') %>
-    <form action='/campgrounds' method="POST">
-        <div>
-            <label for='title'>Title</label>
-            <input type='text' id='title' name=campground[title] placeholder="Add Title">
-        </div>
-        <div>
-            <label for='location'>location</label>
-            <input type='text' id='location' name=campground[location] placeholder='Add location'>
-        </div>
 
-        <button>Submit</button>
-    </form>
+    <div class="row">
+        <h1 class="text-center">
+            New Campground
+        </h1>
+        <div class="col-6 offset-3">
+            <form action='/campgrounds' method="POST">
+                <div class='mb-3'>
+                    <label class='form-label' for='title'>Title</label>
+                    <input class='form-control' type='text' id='title' name='campground[title]' placeholder="Add Title">
+                </div>
+                <div class='mb-3'>
+                    <label class='form-label' for='location'>Location</label>
+                    <input class='form-control' type='text' id='location' name='campground[location]'
+                        placeholder='Add location'>
+                </div>
+                <div class="mb-3">
+                    <label class='form-label' for='price'>Price</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="price">$</span>
+                        <input type="text" class="form-control" placeholder="0.00" id='price' name='campground[price]'
+                            aria-label="price" aria-describedby="price">
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class='form-label' for='image'>Image URL</label>
+                    <input class='form-control' type='text' id='image' name='campground[image]'
+                        placeholder='Add Image URL'>
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea class="form-control" id="description" name='campground[description]'
+                        placeholder="Add Description" rows="3"></textarea>
+                </div>
 
-    <a href='/campgrounds'>Back</a>
+                <div class="mb-3">
+                    <button class='btn btn-success'>Submit</button>
+                </div>
+
+            </form>
+
+            <a href='/campgrounds'>Back</a>
+        </div>
+    </div>
