--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <button class='btn btn-success'>Update Campground</button>
+                    <button class='btn btn-info'>Update Campground</button>
                 </div>
 
             </form>
