--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <button class='btn btn-success'>Submit</button>
+                    <button class='btn btn-success'>Add Campground</button>
                 </div>
 
             </form>
