--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,34 +4,35 @@
             Edit Campground
         </h1>
         <div class="col-6 offset-3">
-            <form action='/campgrounds/<%=campground._id%>?_method=PUT' method="POST">
+            <form action='/campgrounds/<%=campground._id%>?_method=PUT' method="POST" class='needs-validation'
+                novalidate>
                 <div class='mb-3'>
                     <label class='form-label' for='title'>Title</label>
                     <input class='form-control' type='text' id='title' name='campground[title]' placeholder="Add Title"
-                        value="<%= campground.title %>">
+                        value="<%= campground.title %>" required>
                 </div>
                 <div class='mb-3'>
                     <label class='form-label' for='location'>Location</label>
                     <input class='form-control' type='text' id='location' name='campground[location]'
-                        placeholder='Add location' value='<%= campground.location %>'>
+                        placeholder='Add location' value='<%= campground.location %>' required>
                 </div>
                 <div class="mb-3">
                     <label class='form-label' for='price'>Price</label>
                     <div class="input-group">
                         <span class="input-group-text" id="price">$</span>
                         <input type="text" class="form-control" placeholder="0.00" id='price' name='campground[price]'
-                            aria-label="price" aria-describedby="price" value='<%= campground.price%>'>
+                            aria-label="price" aria-describedby="price" value='<%= campground.price%>' required>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class='form-label' for='image'>Image URL</label>
                     <input class='form-control' type='text' id='image' name='campground[image]'
-                        placeholder='Add Image URL' value='<%= campground.image%>'>
+                        placeholder='Add Image URL' value='<%= campground.image%>' required>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea class="form-control" id="description" name='campground[description]'
-                        placeholder="Add Description" rows="3"><%= campground.description %> </textarea>
+                        placeholder="Add Description" rows="3" required><%= campground.description %> </textarea>
                 </div>
 
                 <div class="mb-3">
