--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -27,12 +27,12 @@
                 <div class="mb-3">
                     <label class='form-label' for='image'>Image URL</label>
                     <input class='form-control' type='text' id='image' name='campground[image]'
-                        placeholder='Add Image URL' value='<%= campground.image%>' required>
+                        placeholder='Add Image URL' value='<%= campground.image%>'>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea class="form-control" id="description" name='campground[description]'
-                        placeholder="Add Description" rows="3" required><%= campground.description %> </textarea>
+                        placeholder="Add Description" rows="3"><%= campground.description %> </textarea>
                 </div>
 
                 <div class="mb-3">
