--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layout/boilerplate') %>
 
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-6">
             <div class="card mb-3">
                 <img src='<%=campground.image %>' class="card-img-top" alt="...">
                 <div class="card-body">
@@ -30,5 +30,32 @@
                     2 days ago
                 </div>
             </div>
+        </div>
+        <div class="col-6">
+            <h2>Leave a review</h2>
+            <form action='/campgrounds/<%= campground._id %>/reviews' method="POST" class='needs-validation' novalidate>
+                <div class='mb-3'>
+                    <label for="rating" class="form-label">Rating</label>
+                    <input type="range" class="form-range" min="1" max="5" id="rating" name='review[rating]'>
+                </div>
+                <div class="mb-3">
+                    <label for="body" class="form-label">Review</label>
+                    <textarea class="form-control" id="body" name='review[body]' rows="3" required></textarea>
+                </div>
+                <button class='btn btn-success'>Submit</button>
+            </form>
+            <% for(review of campground.reviews) {%>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            Rating: <%= review.rating %>
+                        </h5>
+                        <p class="card-text">
+                            <%= review.body%>
+                        </p>
+                    </div>
+                </div>
+                <% } %>
+
         </div>
     </div>
