--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -53,9 +53,12 @@
                         <p class="card-text">
                             <%= review.body%>
                         </p>
+                        <form action="/campgrounds/<%= campground._id%>/reviews/<%=review._id%>?_method=DELETE"
+                            method="POST" class='d-inline'>
+                            <button class='btn btn-sm btn-danger'>Delete</button>
+                        </form>
                     </div>
                 </div>
                 <% } %>
-
         </div>
     </div>
