--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,14 @@
                 <a class="nav-link" href="/campgrounds">Campgrounds</a>
                 <a class="nav-link" href="/campgrounds/new"> Add New Campground</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                <% if(!currentUser){ %>
+                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/register">SignUp</a>
+                    <% } else { %>
+                        <a class="nav-link" href="/logout"> logout</a>
+                        <% } %>
+            </div>
         </div>
     </div>
 </nav>
