--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% layout('layout/boilerplate') %>
     <div class="row">
         <h1 class="text-center">
-            Sign-Up
+            Login
         </h1>
         <div class="col-6 offset-3">
             <form action='/login' method="POST" class='needs-validation' novalidate>
