associated user with campground by referencing directly in child(campground) schema then in campground create(post) route set campground.author to req.user._id(from passport) which we can then populate in campground show route to used in campground show template. Also added author to seeded index file to avoid error for seeded data

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -27,7 +27,7 @@
                     </form>
                 </div>
                 <div class="card-footer text-muted">
-                    2 days ago
+                    Submitted by <%= campground.author.username %>
                 </div>
             </div>
         </div>
