--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,15 +20,19 @@
                         $<%= campground.price %>/night
                     </li>
                 </ul>
-                <div class="card-body">
-                    <a href=' /campgrounds/<%=campground._id%>/edit' class="card-link btn btn-info">Edit</a>
-                    <form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST" class='d-inline'>
-                        <button class='btn btn-danger'>Delete</button>
-                    </form>
-                </div>
-                <div class="card-footer text-muted">
-                    Submitted by <%= campground.author.username %>
-                </div>
+                <%= /*console.log(String(campground.author._id)===String(currentUser._id)) */%>
+                    <% if(currentUser && campground.author._id.equals(currentUser._id)) { %>
+                        <div class="card-body">
+                            <a href=' /campgrounds/<%=campground._id%>/edit' class="card-link btn btn-info">Edit</a>
+                            <form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST"
+                                class='d-inline'>
+                                <button class='btn btn-danger'>Delete</button>
+                            </form>
+                        </div>
+                        <% } %>
+                            <div class="card-footer text-muted">
+                                Submitted by <%= campground.author.username %>
+                            </div>
             </div>
         </div>
         <div class="col-6">
