--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -5,7 +5,7 @@
             New Campground
         </h1>
         <div class="col-6 offset-3">
-            <form action='/campgrounds' method="POST" class='needs-validation' novalidate>
+            <form action='/campgrounds' method="POST" class='needs-validation' enctype="multipart/form-data" novalidate>
                 <div class='mb-3'>
                     <label class='form-label' for='title'>Title</label>
                     <input class='form-control' type='text' id='title' name='campground[title]' placeholder="Add Title"
@@ -24,11 +24,14 @@
                             aria-label="price" aria-describedby="price" required>
                     </div>
                 </div>
-                <div class="mb-3">
+                <div class='mb-3'>
+                    <input type="file" name='image' multiple>
+                </div>
+                <!-- <div class="mb-3">
                     <label class='form-label' for='image'>Image URL</label>
                     <input class='form-control' type='text' id='image' name='campground[image]'
                         placeholder='Add Image URL' required>
-                </div>
+                </div> -->
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea class="form-control" id="description" name='campground[description]'
