--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,39 +4,58 @@
     <div class="row">
         <div class="col-6">
             <div class="card mb-3">
-                <% for(let img of campground.images) {%>
-                    <img src='<%=img.url%>' class="card-img-top" alt="...">
-                    <% } %>
+                <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel"
+                    data-bs-interval="false">
+                    <div class="carousel-inner">
+                        <% campground.images.forEach((img,i)=> {%>
+                            <div class="carousel-item <%= i === 0 ? 'active':'' %>">
+                                <img src="<%=img.url%>" class="d-block w-100" alt="...">
+                            </div>
+                            <% }) %>
+                    </div>
+                    <% if(campground.images.length> 1){%>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                        <% } %>
+                </div>
+
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <%= campground.title %>
+                    </h5>
+                    <p class="card-text">
+                        <%= campground.description%>
+                    </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-muted">
+                        <%= campground.location%>
+                    </li>
+                    <li class="list-group-item">
+                        $<%= campground.price %>/night
+                    </li>
+                </ul>
+                <%= /*console.log(String(campground.author._id)===String(currentUser._id)) */%>
+                    <% if(currentUser && campground.author._id.equals(currentUser._id)) { %>
                         <div class="card-body">
-                            <h5 class="card-title">
-                                <%= campground.title %>
-                            </h5>
-                            <p class="card-text">
-                                <%= campground.description%>
-                            </p>
+                            <a href='/campgrounds/<%=campground._id%>/edit' class="card-link btn btn-info">Edit</a>
+                            <form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST"
+                                class='d-inline'>
+                                <button class='btn btn-danger'>Delete</button>
+                            </form>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item text-muted">
-                                <%= campground.location%>
-                            </li>
-                            <li class="list-group-item">
-                                $<%= campground.price %>/night
-                            </li>
-                        </ul>
-                        <%= /*console.log(String(campground.author._id)===String(currentUser._id)) */%>
-                            <% if(currentUser && campground.author._id.equals(currentUser._id)) { %>
-                                <div class="card-body">
-                                    <a href='/campgrounds/<%=campground._id%>/edit'
-                                        class="card-link btn btn-info">Edit</a>
-                                    <form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST"
-                                        class='d-inline'>
-                                        <button class='btn btn-danger'>Delete</button>
-                                    </form>
-                                </div>
-                                <% } %>
-                                    <div class="card-footer text-muted">
-                                        Submitted by <%= campground.author.username %>
-                                    </div>
+                        <% } %>
+                            <div class="card-footer text-muted">
+                                Submitted by <%= campground.author.username %>
+                            </div>
             </div>
         </div>
         <div class="col-6">
