--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-6">
             <div class="card mb-3">
-                <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel"
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"
                     data-bs-interval="false">
                     <div class="carousel-inner">
                         <% campground.images.forEach((img,i)=> {%>
