to add more images-in edit template updated form to load files, added upload.array to edit post route and update update controller to map over req.files and push it to campground.images ann finally save to db

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -25,7 +25,8 @@
                     </div>
                 </div>
                 <div class='mb-3'>
-                    <input type="file" name='image' multiple>
+                    <label class='form-label' for='image'>Upload Images </label>
+                    <input type="file" name='image' id="image" multiple>
                 </div>
                 <!-- <div class="mb-3">
                     <label class='form-label' for='image'>Image URL</label>
