--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,7 +5,7 @@
         </h1>
         <div class="col-6 offset-3">
             <form action='/campgrounds/<%=campground._id%>?_method=PUT' method="POST" class='needs-validation'
-                novalidate>
+                enctype="multipart/form-data" novalidate>
                 <div class='mb-3'>
                     <label class='form-label' for='title'>Title</label>
                     <input class='form-control' type='text' id='title' name='campground[title]' placeholder="Add Title"
@@ -25,9 +25,10 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class='form-label' for='image'>Image URL</label>
-                    <input class='form-control' type='text' id='image' name='campground[image]'
-                        placeholder='Add Image URL' value='<%= campground.image%>' required>
+                    <label class='form-label' for='image'>Add Images</label>
+                    <!-- <input class='form-control' type='text' id='image' name='campground[image]'
+                        placeholder='Add Image URL' value='<%= /* campground.image */%>' required> -->
+                    <input type="file" name='image' id="image" multiple>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
