--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -25,16 +25,33 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class='form-label' for='image'>Add Images</label>
-                    <!-- <input class='form-control' type='text' id='image' name='campground[image]'
-                        placeholder='Add Image URL' value='<%= /* campground.image */%>' required> -->
-                    <input type="file" name='image' id="image" multiple>
-                </div>
-                <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea class="form-control" id="description" name='campground[description]'
                         placeholder="Add Description" rows="3" required><%= campground.description %></textarea>
                 </div>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Add more Image(s)</label>
+                    <input class="form-control" type="file" name='image' id="image" multiple>
+                </div>
+                <div class="mb-3">
+                    <label for="" class="form-label">Delete Existing Image(s)</label>
+                    <% campground.images.forEach(function(img,i){%>
+                        <img src="<%=img.url%>" class='img-thumbnail' alt="">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name=deleteImages[]
+                                value="<%=img.filename%>" id="image-<%=i%>">
+                            <label class="form-check-label" for="image-<%=i%>">
+                                Delete?
+                            </label>
+                        </div>
+                        <% }) %>
+                </div>
+                <!-- <div class="mb-3">
+                    <label class='form-label' for='image'>Add Images</label> -->
+                <!-- <input class='form-control' type='text' id='image' name='campground[image]'
+                        placeholder='Add Image URL' value='<%= /* campground.image */%>' required> -->
+                <!-- <input type="file" name='image' id="image" multiple>
+                </div> -->
 
                 <div class="mb-3">
                     <button class='btn btn-info'>Update Campground</button>
