--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,10 @@
         <div class="card">
             <div class="row">
                 <div class="col-md-4">
-                    <img class='img-fluid' src=<%=campground.images[0].url %> >
+                    <% if(campground.images[0]){ %>
+                        <img class='img-fluid' src=<%=campground.images[0].url %> >
+                        <% } %>
+
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
