--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -24,10 +24,14 @@
                             aria-label="price" aria-describedby="price" required>
                     </div>
                 </div>
-                <div class='mb-3'>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Upload Image(s)</label>
+                    <input class="form-control" type="file" name='image' id="image" multiple>
+                </div>
+                <!-- <div class='mb-3'>
                     <label class='form-label' for='image'>Upload Images </label>
                     <input type="file" name='image' id="image" multiple>
-                </div>
+                </div> -->
                 <!-- <div class="mb-3">
                     <label class='form-label' for='image'>Image URL</label>
                     <input class='form-control' type='text' id='image' name='campground[image]'
