--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -34,10 +34,13 @@
                     <input class="form-control" type="file" name='image' id="image" multiple>
                 </div>
                 <div class="mb-3">
-                    <label for="" class="form-label">Delete Existing Image(s)</label>
+                    <div>
+                        <label for="" class="form-label">Delete Existing Image(s)</label>
+                    </div>
+
                     <% campground.images.forEach(function(img,i){%>
-                        <img src="<%=img.url%>" class='img-thumbnail' alt="">
-                        <div class="form-check">
+                        <img src="<%=img.thumbnail%>" class='img-thumbnail' alt="">
+                        <div class="form-check-inline">
                             <input class="form-check-input" type="checkbox" name=deleteImages[]
                                 value="<%=img.filename%>" id="image-<%=i%>">
                             <label class="form-check-label" for="image-<%=i%>">
