created mapbox account, pasted the mapbox token in .env file, installed and required mapbox geocoding service, accessed token and lastly identified the latitude and longitude from forwardgeocoding based on the location entered while creating a campground

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -117,6 +117,7 @@
                                             <button class='btn btn-sm btn-danger'>Delete</button>
                                         </form>
                                         <% } %>
+                                            <%= console.log(campground) %>
                                 </div>
                             </div>
                             <% } %>
