Added the geocordinate to DB by first adding a property to campground schema and while creating a campground add the coordinates details to the created schema property. Also displayed map using Mapbox GL Js

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,6 +3,7 @@
 
     <div class="row">
         <div class="col-6">
+            <div id='map' style='width: 400px; height: 300px;'></div>
             <div class="card mb-3">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"
                     data-bs-interval="false">
@@ -123,3 +124,8 @@
                             <% } %>
         </div>
     </div>
+
+    <script>
+        const mapBoxToken = '<%-process.env.MAPBOX_TOKEN%>';
+    </script>
+    <script src='/javascript/showPageMap.js'></script>
