Added mapbox default marker and displayed it on the map based on the location entered while creating a campground

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -126,6 +126,7 @@
     </div>
 
     <script>
-        const mapBoxToken = '<%-process.env.MAPBOX_TOKEN%>';
+        const mapBoxToken = '<%-process.env.MAPBOX_TOKEN%>'
+        const campground = <%-JSON.stringify(campground)%>;
     </script>
     <script src='/javascript/showPageMap.js'></script>
