--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -39,7 +39,7 @@
                     </div>
 
                     <% campground.images.forEach(function(img,i){%>
-                        <img src="<%=img.thumbnail%>" class='img-thumbnail' alt="">
+                        <img class="mb-3" src="<%=img.thumbnail%>" class='img-thumbnail' alt="">
                         <div class="form-check-inline">
                             <input class="form-check-input" type="checkbox" name=deleteImages[]
                                 value="<%=img.filename%>" id="image-<%=i%>">
