--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,9 +6,10 @@
             <div class="row">
                 <div class="col-md-4">
                     <% if(campground.images[0]){ %>
-                        <img class='img-fluid' src=<%=campground.images[0].url %> >
-                        <% } %>
-
+                        <img class='img-fluid' src=<%=campground.images[0].url %>>
+                    <% } else{ %>
+                        <img class='img-fluid' src='https://images.unsplash.com/photo-1533243367503-0b7337004671?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGNhbXB8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60'>
+                    <% } %>    
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
