added cluster map code in index template and created seperate cluster map js file and referenced it in index template

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,7 @@
 <% layout('layout/boilerplate') %>
+
+    <div id="map" style="width: 100%;height: 300px;"></div>
+    
     <h1>All Campgrounds</h1>
 
     <% for(let campground of campgrounds){ %>
@@ -33,3 +36,8 @@
         </div>
 
         <% } %>
+        <script>
+            const mapBoxToken = '<%-process.env.MAPBOX_TOKEN%>'
+        </script>
+
+        <script src='/javascript/clusterMap.js'></script>
