--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,7 @@
 <% layout('layout/boilerplate') %>
 
     <div id="map" style="width: 100%;height: 300px;"></div>
-    
+
     <h1>All Campgrounds</h1>
 
     <% for(let campground of campgrounds){ %>
@@ -10,9 +10,10 @@
                 <div class="col-md-4">
                     <% if(campground.images[0]){ %>
                         <img class='img-fluid' src=<%=campground.images[0].url %>>
-                    <% } else{ %>
-                        <img class='img-fluid' src='https://images.unsplash.com/photo-1533243367503-0b7337004671?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGNhbXB8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60'>
-                    <% } %>    
+                        <% } else{ %>
+                            <img class='img-fluid'
+                                src='https://images.unsplash.com/photo-1533243367503-0b7337004671?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGNhbXB8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60'>
+                            <% } %>
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -36,8 +37,9 @@
         </div>
 
         <% } %>
-        <script>
-            const mapBoxToken = '<%-process.env.MAPBOX_TOKEN%>'
-        </script>
+            <script>
+                const mapBoxToken = '<%-process.env.MAPBOX_TOKEN%>'
+                const campgrounds = { features:<%-JSON.stringify(campgrounds) %>};
+            </script>
 
-        <script src='/javascript/clusterMap.js'></script>
+            <script src='/javascript/clusterMap.js'></script>
