--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,8 @@
 <% layout('layout/boilerplate') %>
 
-    <div id="map" style="width: 100%;height: 300px;"></div>
+    <div id="cluster-map"></div>
 
-    <h1>All Campgrounds</h1>
+    <h1 class='mt-3 text-center'>All Campgrounds</h1>
 
     <% for(let campground of campgrounds){ %>
         <div class="card mb-2">
