--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="col-6">
-            <div class="card mb-3" id='map' style="width: 100%;height:300px;"></div>
+            <div class="card mb-3" id='map'></div>
             <% if(currentUser) {%>
                 <h2>Leave a review</h2>
                 <form action='/campgrounds/<%= campground._id %>/reviews' method="POST" class='needs-validation'
