--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -13,6 +13,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css' rel='stylesheet' />
 
+    <link rel="stylesheet" href="/stylesheet/app.css">
 
 </head>
 
