--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,5 +1,5 @@
 <% if(success && success.length){ %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
         <%= success %>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
